# JURO

./: .gitignore  README.md  docker-compose.yml  maven-local-settings.xml
backend/: pom.xml
backend/src/main/resources/: application-desktop.yml  application.yml
backend/src/main/resources/db/desktop-migration/: V1__desktop_schema_and_seed.sql  V2__make_solution_video_optional.sql
backend/src/main/resources/db/migration/: V1__create_core_tables.sql  V2__seed_more_problems.sql  V3__add_constraints_and_submission_details.sql  V6__keep_only_two_sum.sql  (+2 more)
docs/: architecture-diagrams.md
frontend/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  vite.config.js
frontend/scripts/: tauri-config.mjs  tauri-dev.mjs
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/app/: App.tsx  theme.tsx
frontend/src/components/code/: CodeEditorCard.tsx  CodeFontSizeControls.tsx  CodePreview.tsx  codeUtils.ts  useCodeEditorFontSize.ts
frontend/src/components/markdown/: MarkdownEditor.tsx
frontend/src/components/ui/: FieldError.tsx  FormSelect.tsx
frontend/src/features/help/: AboutHelpDialog.tsx
frontend/src/features/knowledge-check/: KnowledgeCheckDialog.tsx
frontend/src/features/local-workspace/: LocalWorkspacePanel.tsx  LocalWorkspaceSettingsDialog.tsx
frontend/src/features/problem-authoring/: EditProblemDrawer.tsx  problemForm.ts
frontend/src/features/problem-bank/: ProblemListPage.tsx  catalog.ts
(+110 files in other folders)
