[package]
name = "juro"
version = "0.1.0"
description = "JURO desktop shell"
authors = ["JURO"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "juro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
